footer, overflow, save, layers fixes

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,14 +2,17 @@
 @import 'libs/fonts';
 
 * {
-    font-family: 'Ubuntu';
-    // , sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     font-weight: 300;
+}
+
+html { 
+    // overflow:  hidden; 
 }
 
 .container {
     width: 1440px;
-    margin: 0 auto; //для адаптива надо к драггабл элементам прибавлять margin
+    margin: 0 auto;
 }
 
 .overlay {
@@ -38,7 +41,9 @@ header {
 }
 
 .main {
+    min-height: calc(100vh - 53px - 70px);
     &__wrapper {
+        
         padding: 40px 0px;
         display: flex;
         justify-content: space-between;
@@ -53,6 +58,12 @@ header {
                 height: 550px;
                 background-color: #fff;
                 background: url("../img/board/white_board.jpg") center center/cover no-repeat;
+            }
+            .draggableNewImg {
+                max-height: 220px;
+                max-width: 330px;
+                object-fit: contain;
+                position: absolute;
             }
         }
     
@@ -96,6 +107,9 @@ header {
                         max-width: 100%;
                         max-height: 220px;
                         z-index: 0;
+                    }
+                    .draggableNewImg {
+                        position: absolute;
                     }
                 }
             }
@@ -143,6 +157,7 @@ header {
                         box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.25);
                         background-color: rgb(253, 132, 132);
                         padding: 0;
+                        cursor: pointer;
                     }
                     &:focus {
                         outline: none;
@@ -159,7 +174,7 @@ header {
                         box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.25);
                         background-color: rgb(102, 248, 139);
                         padding: 0;
-                        // cursor: pointer;
+                        cursor: pointer;
                     }
                     &:focus {
                         outline: none;
@@ -207,6 +222,7 @@ footer {
         height: 50px;
         width: 360px;
         background-color: rgb(255, 249, 180);
+        font-size: 16px;
         transition: 0.5s all;
         &:hover {
             border: none;
@@ -221,5 +237,13 @@ footer {
     }
     img {
         margin-top: 50px;
+    }
+    p {
+        margin-top: 50px;
+        font-size: 25px;
+        text-align: center;
+        &:hover {
+            cursor: default;
+        }
     }
 }
